<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.learning.mobile.tasktimer.MainActivity">

    <item
        android:id="@+id/mainMenu_addTask"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="10"
        android:title="@string/mainMenu_addTask"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuMain_showDurations"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="20"
        android:title="@string/menuMain_showDurations"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mainMenu_settings"
        android:orderInCategory="30"
        android:title="@string/mainMenu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuMain_showAbout"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="40"
        android:title="@string/menuMain_showAbout"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuMain_generate"
        android:orderInCategory="50"
        android:title="@string/menuMain_generate"
        android:visible="false"
        app:showAsAction="never" />
</menu>