<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddEditFragment">


    <EditText
        android:id="@+id/addEdit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/addEdit_name"
        android:inputType="textNoSuggestions"
        android:maxLength="64" />

    <EditText
        android:id="@+id/addEdit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/addEdit_description"
        android:inputType="textMultiLine"
        android:maxLength="256" />

    <EditText
        android:id="@+id/addEdit_sortOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/addEdit_sortOrder"
        android:inputType="number"
        android:maxLength="9" />

    <Button
        android:id="@+id/addEdit_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@android:drawable/ic_menu_save"
        android:text="@string/addEdit_save" />

<!--
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TEXT"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:icon="@android:drawable/ic_menu_save"

        />
-->

</LinearLayout>